refactor: Open API 사용처 변경 및 선수, 스탯 등 저장 방법 수정